--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,12 @@ jobs:
           # Verify the changes
           echo "Updated versions in flake.nix:"
           grep 'version = "' flake.nix
+          
+          # Commit the changes to keep git clean for GoReleaser
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add flake.nix
+          git commit -m "chore: update flake.nix version to ${VERSION_NO_V} for release ${VERSION}"
 
       - name: Run tests
         run: nix develop --command make test
@@ -77,16 +83,16 @@ jobs:
               # Save vendorHash to temp file for later use
               echo "${VENDOR_HASH}" > vendor-hash.txt
 
-              # Update flake.nix with real hash temporarily
-              cp flake.nix flake.nix.bak
-              sed -i "s|vendorHash = pkgs.lib.fakeHash;|vendorHash = \"${VENDOR_HASH}\";|" flake.nix
-
+              # Update flake.nix with real hash and commit it
+              sed -i "s|vendorHash = \"[^\"]*\";|vendorHash = \"${VENDOR_HASH}\";|g" flake.nix
+              
               # Test build with real hash
               nix build
               echo "Build succeeded with correct vendorHash"
-
-              # Restore original flake.nix to keep git clean
-              mv flake.nix.bak flake.nix
+              
+              # Commit the vendorHash update
+              git add flake.nix
+              git commit -m "chore: update vendorHash for release"
             else
               echo "Failed to extract vendorHash from build output"
               cat build-output.log
