fix: add --impure flag to test workflow
- Test workflow runs on all pushes/PRs, not just releases
- Vendor hash may not match current dependencies in non-release commits
- Release workflow doesn't need --impure since vendor hash is updated by release script

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,10 +22,10 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
     
     - name: Run tests
-      run: nix develop --command make test
+      run: nix develop --impure --command make test
     
     - name: Generate coverage report
-      run: nix develop --command make test-coverage
+      run: nix develop --impure --command make test-coverage
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
